Pull request #1164: AG-12181 fix confirm modal
Merge in EXTENSIONS/browser-extension from fix/AG-12181 to master

Squashed commit of the following:

commit 12636bcc80b1aec581c5592429fb55bee6e8a524
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Jan 11 11:10:05 2022 +0300

    AG-12181 fix confirm modal

--- a/Extension/src/pages/options/styles/modal.pcss
+++ b/Extension/src/pages/options/styles/modal.pcss
@@ -14,6 +14,10 @@
         font-size: 16px;
         font-weight: 400;
         margin-bottom: 15px;
+
+        &--confirm {
+            max-width: 300px
+        }
     }
 
     &__close {
